# multicosim

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  base.Dockerfile  docker-bake.hcl  gzcm.Dockerfile  multicosim.Dockerfile  pyproject.toml  rocky.Dockerfile  rocky_build.Dockerfile  ubuntu.Dockerfile
.github/workflows/: images.yaml
ardupilot/: Makefile  firmware.Dockerfile  gazebo.Dockerfile  pyproject.toml
ardupilot/mods/ardupilot/: SIM_JSON.cpp  SIM_JSON.h
ardupilot/mods/gazebo/: ArduPilotPlugin.cc
ardupilot/src/: firmware.py
examples/: README.md  ardupilot.py  component.py  docker-bake.hcl  f16.py  px4.py  quickstart.py
examples/rover/: Dockerfile  Makefile  pyproject.toml
examples/rover/controller/: Dockerfile  Makefile  pyproject.toml
examples/rover/controller/src/: main.py  rover.py
examples/rover/controller/src/controller/: attacks.py  automaton.py  errors.py  messages.py
examples/rover/gazebo/: Dockerfile  Makefile
examples/rover/gazebo/resources/models/ngc_rover/: model.config  model.sdf
examples/rover/src/: plots.py  test.py
gazebo/: .envrc  Dockerfile  Makefile  Pipfile  README.md  base.Dockerfile  gazebo.Dockerfile  pyproject.toml  rocky.Dockerfile  ubuntu.Dockerfile
gazebo/resources/worlds/: default.sdf
gazebo/src/: gazebo.py
px4/: Makefile  Pipfile  README.md  firmware.Dockerfile  gazebo.Dockerfile  mavsdk.patch  pyproject.toml
px4/src/: firmware.py
src/gzcm/: __init__.py  containers.py  docker.py  firmware.py  gazebo.py  images.py  px4.py
src/multicosim/: __init__.py  ardupilot.py  components.py  containers.py  docker.py  firmware.py  gazebo.py  gz_firmware.py  images.py  px4.py  simulations.py
src/multicosim/docker/: component.py  firmware.py  gazebo.py  simulation.py
