[project]
name = "ardupilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click",
]

[dependency-groups]
dev = [
    "multicosim",
]

[tool.uv.sources]
multicosim = { path = "../" }

[tool.pyright]
venvPath = "."
venv = ".venv"
