[project]
name = "px4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.8",
    "mavsdk>=2.8,<3",
    "pyzmq>=26.2.1",
]

[dependency-groups]
dev = [
    "multicosim",
]

[tool.uv.sources]
multicosim = { path = "../", editable = true }
